Add bm25, linter, mining params

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,7 +12,7 @@ nav:
       - Passages: API References/Data/passages.md
     - Miners: API References/miners.md
   - Creator Portfolio: https://www.herumbshandilya.com/
-docs_dir: 'docs/docs'
+docs_dir: 'docs/'
 
 theme:
   name: material
