--- a/ruff.toml
+++ b/ruff.toml
@@ -54,7 +54,7 @@ dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 quote-style = "double"
 
 # Like Black, indent with spaces, rather than tabs.
-indent-style = "space"
+indent-style = "tab"
 
 # Like Black, respect magic trailing commas.
 skip-magic-trailing-comma = false
