--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ rank-bm25 = "^0.2.2"
 sentence-transformers = "^2.6.1"
 pydantic = "^2.7.1"
 loguru = "^0.7.2"
+ruff = "^0.4.4"
+pyright = "^1.1.362"
 
 
 [build-system]
