update pyright config

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -34,5 +34,6 @@
     "typeCheckDiagnostics": {
       "reportMissingImport": true,
       "reportMissingTypeStubs": true
-    }
-  }
+    },
+    "verboseOutput": true,
+}
