inbatch and hard neg miners, ci fix, lint fix, typecheck fixes

--- a/.github/workflows/qol.yaml
+++ b/.github/workflows/qol.yaml
@@ -3,6 +3,14 @@ name: Lint, Type Check, and Test
 on: [push, pull_request]
 
 jobs:
+  dependencies:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+      - run: pip install poetry && poetry install
   lint:
     runs-on: ubuntu-latest
     steps:
