--- a/.github/workflows/qol.yaml
+++ b/.github/workflows/qol.yaml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-      - run: pip install poetry && poetry install && poetry shell
+      - run: pip install poetry && poetry install && source $HOME/.poetry/env
   lint:
     runs-on: ubuntu-latest
     steps:
