--- a/.github/workflows/qol.yaml
+++ b/.github/workflows/qol.yaml
@@ -3,21 +3,37 @@ name: Lint, Type Check, and Test
 on: [push, pull_request]
 
 jobs:
-  dependencies:
+  qol:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - name: Install and configure Poetry
+        uses: snok/install-poetry@v1
         with:
-          python-version: '3.11'
-      - run: pip install poetry && poetry install && source $HOME/.poetry/env
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+          version: 1.1.13
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+      - name: Set up cache
+        uses: actions/cache@v2
+        id: cached-poetry-dependencies
         with:
-          python-version: '3.11'
+          path: .venv
+          key: venv-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}
+      - name: Install dependencies
+        run: poetry install
+        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+      - name: Lint
+        run: |
+          pip install ruff
+          ruff check .
+      - name: Type check
+        run: |
+          pip install pyright
+          pyright
+      - name: Test
+        run: |
+          pip install pytest
+          pytest
       - run: pip install ruff
       - run: ruff check .
 
@@ -40,3 +56,4 @@ jobs:
           python-version: '3.11'
       - run: pip install pytest
       - run: pytest
+
