--- a/.github/workflows/qol.yaml
+++ b/.github/workflows/qol.yaml
@@ -7,21 +7,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Install and configure Poetry
-        uses: snok/install-poetry@v1
+      - uses: actions/setup-python@v4
         with:
-          version: 1.1.13
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-      - name: Set up cache
-        uses: actions/cache@v2
-        id: cached-poetry-dependencies
-        with:
-          path: .venv
-          key: venv-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}
+          python-version: '3.11'
       - name: Install dependencies
-        run: poetry install
-        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+        run: |
+          pip install poetry
+          poetry install
       - name: Lint
         run: |
           pip install ruff
@@ -29,31 +21,8 @@ jobs:
       - name: Type check
         run: |
           pip install pyright
-          pyright
+          poetry run pyright
       - name: Test
         run: |
           pip install pytest
-          pytest
-      - run: pip install ruff
-      - run: ruff check .
-
-  type-check:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-      - run: pip install pyright
-      - run: pyright
-
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-      - run: pip install pytest
-      - run: pytest
-
+          PYTHONPATH=$PYTHONPATH:. poetry run pytype
