--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "pirate"
-version = "0.1.0"
-description = ""
+version = "0.1.1a0"
+description = "Pirate is a Python package that aims to be a unified framework for all things information retrieval. Currently, it serves as a go-to library for negative mining."
 authors = ["Herumb Shandilya <herumbshandilya123@gmail.com>"]
 readme = "README.md"
 
@@ -17,7 +17,7 @@ pydantic = "^2.7.1"
 loguru = "^0.7.2"
 ruff = "^0.4.4"
 pyright = "^1.1.362"
-
+dspy-ai = "^2.4.9"
 
 [build-system]
 requires = ["poetry-core"]
