add tests for ranking and miners, patches and fixes for miners, ruff config updates

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -30,6 +30,7 @@
         "node_modules",
         "site-packages",
         "venv",
+        "tests/*"
     ],
     "typeCheckDiagnostics": {
       "reportMissingImport": true,
